<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="12dp"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="12dp"
            android:clipToPadding="false"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_detected_flower"
                android:text="@string/prefix_flower"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_wikipedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_detected_flower"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:cardUseCompatPadding="true"
                android:layout_marginTop="8dp"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardElevation="8dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ImageView
                        android:id="@+id/iv_flower_type"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        android:background="?attr/selectableItemBackgroundBorderless" />

                    <TextView
                        android:id="@+id/tv_flower_type"
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/iv_flower_type"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:padding="8dp"
                        android:text=""
                        android:textColor="@color/colorIcons" />

                    <TextView
                        android:id="@+id/tv_info_source"
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/iv_flower_type"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="8dp"
                        android:padding="8dp"
                        android:text="@string/information_source"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_flower_description"
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_info_source"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:padding="8dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="Rose information: ABCABCABC"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="8dp" />


                    <Button
                        android:id="@+id/btn_show_more"
                        android:text="@string/show_more"
                        android:drawableLeft="@drawable/ic_right_arrow"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_below="@+id/tv_flower_description"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:padding="8dp"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stateListAnimator="@null"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_reference"
                android:text="@string/reference"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/card_wikipedia"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_biology"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_reference"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:cardUseCompatPadding="true"
                android:layout_marginTop="8dp"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardElevation="8dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/tv_second_info_source"
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="8dp"
                        android:padding="8dp"
                        android:text="@string/biology_source"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_flower_definition"
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_second_info_source"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:padding="8dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="Rose information: ABCABCABC"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="8dp" />


                    <Button
                        android:id="@+id/btn_second_show_more"
                        android:text="@string/show_more"
                        android:drawableLeft="@drawable/ic_right_arrow"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_below="@+id/tv_flower_definition"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:padding="8dp"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stateListAnimator="@null"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
